--- a/xp-components.html
+++ b/xp-components.html
@@ -23,6 +23,7 @@ This is a collection of expandjs components.
 @dependency xp-doc-parser ExpandJS/xp-doc-parser
 @dependency xp-doc-viewer ExpandJS/xp-doc-viewer
 @dependency xp-embedded-state ExpandJS/xp-embedded-state
+@dependency xp-emitter ExpandJS/xp-emitter
 @dependency xp-focused-state ExpandJS/xp-focused-state
 @dependency xp-grid ExpandJS/xp-grid
 @dependency xp-i18n ExpandJS/xp-i18n
@@ -36,13 +37,16 @@ This is a collection of expandjs components.
 @dependency xp-media-query ExpandJS/xp-media-query
 @dependency xp-meta ExpandJS/xp-meta
 @dependency xp-notifier ExpandJS/xp-notifier
+@dependency xp-observer ExpandJS/xp-notifier
 @dependency xp-overlay ExpandJS/xp-overlay
 @dependency xp-overlay-state ExpandJS/xp-overlay-state
 @dependency xp-pages ExpandJS/xp-pages
 @dependency xp-pressed-state ExpandJS/xp-pressed-state
 @dependency xp-referral ExpandJS/xp-referral
+@dependency xp-request ExpandJS/xp-request
 @dependency xp-router ExpandJS/xp-route
 @dependency xp-router ExpandJS/xp-router
+@dependency xp-schema ExpandJS/xp-schema
 @dependency xp-script ExpandJS/xp-script
 @dependency xp-selected-state ExpandJS/xp-selected-state
 @dependency xp-shared ExpandJS/xp-shared
@@ -64,6 +68,7 @@ This is a collection of expandjs components.
 <link rel="import" href="../xp-doc-parser/xp-doc-parser.html">
 <link rel="import" href="../xp-doc-viewer/xp-doc-viewer.html">
 <link rel="import" href="../xp-embedded-state/xp-embedded-state.html">
+<link rel="import" href="../xp-emitter/xp-emitter.html">
 <link rel="import" href="../xp-focused-state/xp-focused-state.html">
 <link rel="import" href="../xp-grid/xp-grid.html">
 <link rel="import" href="../xp-i18n/xp-i18n.html">
@@ -79,14 +84,17 @@ This is a collection of expandjs components.
 <link rel="import" href="../xp-media-query/xp-media-query.html">
 <link rel="import" href="../xp-meta/xp-meta.html">
 <link rel="import" href="../xp-notifier/xp-notifier.html">
+<link rel="import" href="../xp-observer/xp-observer.html">
 <link rel="import" href="../xp-overlay-state/xp-overlay-state.html">
 <link rel="import" href="../xp-overlay/xp-overlay.html">
 <link rel="import" href="../xp-pages/xp-page.html">
 <link rel="import" href="../xp-pages/xp-pages.html">
 <link rel="import" href="../xp-pressed-state/xp-pressed-state.html">
 <link rel="import" href="../xp-referral/xp-referral.html">
+<link rel="import" href="../xp-request/xp-request.html">
 <link rel="import" href="../xp-router/xp-route.html">
 <link rel="import" href="../xp-router/xp-router.html">
+<link rel="import" href="../xp-schema/xp-schema.html">
 <link rel="import" href="../xp-script/xp-script.html">
 <link rel="import" href="../xp-selected-state/xp-selected-state.html">
 <link rel="import" href="../xp-shared/xp-shared.html">
