--- a/xp-elements.html
+++ b/xp-elements.html
@@ -11,6 +11,7 @@ This is a collection of expandjs elements.
 
 @collection xp-elements
 @description This is a collection of expandjs elements.
+@homepage http://www.expandjs.com/elements/xp-elements
 
 @dependency xp-anchor-state ExpandJS/xp-anchor-state
 @dependency xp-animation ExpandJS/xp-animation
