--- a/xp-elements.html
+++ b/xp-elements.html
@@ -38,7 +38,7 @@ This is a collection of expandjs elements.
 @dependency xp-media-query ExpandJS/xp-media-query
 @dependency xp-meta ExpandJS/xp-meta
 @dependency xp-notifier ExpandJS/xp-notifier
-@dependency xp-observer ExpandJS/xp-notifier
+@dependency xp-observer ExpandJS/xp-observer
 @dependency xp-overlay ExpandJS/xp-overlay
 @dependency xp-overlay-state ExpandJS/xp-overlay-state
 @dependency xp-pages ExpandJS/xp-pages
