--- a/xp-elements.html
+++ b/xp-elements.html
@@ -11,6 +11,7 @@ This is a collection of ExpandJS elements
 
 @collection xp-elements
 @description A collection of ExpandJS elements
+@group collections
 @homepage http://www.expandjs.com/elements/xp-elements
 
 @dependency xp-anchor-state ExpandJS/xp-anchor-state
