--- a/xp-elements.html
+++ b/xp-elements.html
@@ -12,7 +12,7 @@ This is a collection of ExpandJS elements
 @collection xp-elements
 @description A collection of ExpandJS elements
 @group collections
-@homepage http://www.expandjs.com/elements/xp-elements
+@homepage http://expandjs.com/elements/xp-elements
 
 @dependency xp-anchor-state ExpandJS/xp-anchor-state
 @dependency xp-animation ExpandJS/xp-animation
