--- a/xp-elements.html
+++ b/xp-elements.html
@@ -11,7 +11,7 @@ This is a collection of ExpandJS elements
 
 @collection xp-elements
 @description A collection of ExpandJS elements
-@keywords custom elements, web components, web app, html5, expandjs
+@keywords custom elements, web components, web app, html5, expandjs, web-components
 @group collections
 @homepage http://expandjs.com/elements/xp-elements
 
