--- a/xp-elements.html
+++ b/xp-elements.html
@@ -15,46 +15,46 @@ This is a collection of ExpandJS elements
 @group collections
 @homepage http://expandjs.com/elements/xp-elements
 
-@dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior
-@dependency xp-animation ExpandJS/xp-animation
-@dependency xp-collapse ExpandJS/xp-collapse
-@dependency xp-cookie ExpandJS/xp-cookie
-@dependency xp-device ExpandJS/xp-device
-@dependency xp-dialog ExpandJS/xp-dialog
-@dependency xp-doc-page ExpandJS/xp-doc-page
-@dependency xp-doc-parser ExpandJS/xp-doc-parser
-@dependency xp-doc-viewer ExpandJS/xp-doc-viewer
-@dependency xp-embedded-behavior ExpandJS/xp-embedded-behavior
-@dependency xp-emitter ExpandJS/xp-emitter
-@dependency xp-focused-behavior ExpandJS/xp-focused-behavior
-@dependency xp-grid ExpandJS/xp-grid
-@dependency xp-i18n-behavior ExpandJS/xp-i18n-behavior
-@dependency xp-icon ExpandJS/xp-icon
-@dependency xp-iconset ExpandJS/xp-iconset
-@dependency xp-input-behavior ExpandJS/xp-input-behavior
-@dependency xp-label ExpandJS/xp-label
-@dependency xp-list ExpandJS/xp-list
-@dependency xp-markdown ExpandJS/xp-markdown
-@dependency xp-master-state ExpandJS/xp-master-state
-@dependency xp-media-query ExpandJS/xp-media-query
-@dependency xp-meta ExpandJS/xp-meta
-@dependency xp-observer ExpandJS/xp-observer
-@dependency xp-overlay-behavior ExpandJS/xp-overlay-behavior
-@dependency xp-overlay ExpandJS/xp-overlay
-@dependency xp-pages ExpandJS/xp-pages
-@dependency xp-pressed-behavior ExpandJS/xp-pressed-behavior
-@dependency xp-pubsub-behavior ExpandJS/xp-pubsub-behavior
-@dependency xp-referral-behavior ExpandJS/xp-referral-behavior
-@dependency xp-request ExpandJS/xp-request
-@dependency xp-router ExpandJS/xp-router
-@dependency xp-schema ExpandJS/xp-schema
-@dependency xp-script ExpandJS/xp-script
-@dependency xp-selected-behavior ExpandJS/xp-selected-behavior
-@dependency xp-shared ExpandJS/xp-shared
-@dependency xp-slave-state ExpandJS/xp-slave-state
-@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior
-@dependency xp-tooltip ExpandJS/xp-tooltip
-@dependency xp-window ExpandJS/xp-window
+@dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior#0.9.1
+@dependency xp-animation ExpandJS/xp-animation#0.9.1
+@dependency xp-collapse ExpandJS/xp-collapse#0.9.1
+@dependency xp-cookie ExpandJS/xp-cookie#0.9.1
+@dependency xp-device ExpandJS/xp-device#0.9.1
+@dependency xp-dialog ExpandJS/xp-dialog#0.9.1
+@dependency xp-doc-page ExpandJS/xp-doc-page#0.9.1
+@dependency xp-doc-parser ExpandJS/xp-doc-parser#0.9.1
+@dependency xp-doc-viewer ExpandJS/xp-doc-viewer#0.9.1
+@dependency xp-embedded-behavior ExpandJS/xp-embedded-behavior#0.9.1
+@dependency xp-emitter ExpandJS/xp-emitter#0.9.1
+@dependency xp-focused-behavior ExpandJS/xp-focused-behavior#0.9.1
+@dependency xp-grid ExpandJS/xp-grid#0.9.1
+@dependency xp-i18n-behavior ExpandJS/xp-i18n-behavior#0.9.1
+@dependency xp-icon ExpandJS/xp-icon#0.9.1
+@dependency xp-iconset ExpandJS/xp-iconset#0.9.1
+@dependency xp-input-behavior ExpandJS/xp-input-behavior#0.9.1
+@dependency xp-label ExpandJS/xp-label#0.9.1
+@dependency xp-list ExpandJS/xp-list#0.9.1
+@dependency xp-markdown ExpandJS/xp-markdown#0.9.1
+@dependency xp-master-state ExpandJS/xp-master-state#0.9.1
+@dependency xp-media-query ExpandJS/xp-media-query#0.9.1
+@dependency xp-meta ExpandJS/xp-meta#0.9.1
+@dependency xp-observer ExpandJS/xp-observer#0.9.1
+@dependency xp-overlay-behavior ExpandJS/xp-overlay-behavior#0.9.1
+@dependency xp-overlay ExpandJS/xp-overlay#0.9.1
+@dependency xp-pages ExpandJS/xp-pages#0.9.1
+@dependency xp-pressed-behavior ExpandJS/xp-pressed-behavior#0.9.1
+@dependency xp-pubsub-behavior ExpandJS/xp-pubsub-behavior#0.9.1
+@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.1
+@dependency xp-request ExpandJS/xp-request#0.9.1
+@dependency xp-router ExpandJS/xp-router#0.9.1
+@dependency xp-schema ExpandJS/xp-schema#0.9.1
+@dependency xp-script ExpandJS/xp-script#0.9.1
+@dependency xp-selected-behavior ExpandJS/xp-selected-behavior#0.9.1
+@dependency xp-shared ExpandJS/xp-shared#0.9.1
+@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.1
+@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.1
+@dependency xp-tooltip ExpandJS/xp-tooltip#0.9.1
+@dependency xp-window ExpandJS/xp-window#0.9.1
 -->
 
 <link rel="import" href="../xp-anchor-behavior/xp-anchor-behavior.html">
