--- a/xp-elements.html
+++ b/xp-elements.html
@@ -17,6 +17,7 @@ This is a collection of ExpandJS elements
 
 @dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior#0.9.3
 @dependency xp-animation ExpandJS/xp-animation#0.9.3
+@dependency xp-array-behavior ExpandJS/xp-array-behavior#0.9.3
 @dependency xp-collapse ExpandJS/xp-collapse#0.9.3
 @dependency xp-cookie ExpandJS/xp-cookie#0.9.3
 @dependency xp-device ExpandJS/xp-device#0.9.3
@@ -60,6 +61,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-anchor-behavior/xp-anchor-behavior.html">
 <link rel="import" href="../xp-animation/xp-animation-group.html">
 <link rel="import" href="../xp-animation/xp-animation.html">
+<link rel="import" href="../xp-array-behavior/xp-array-behavior.html">
 <link rel="import" href="../xp-collapse/xp-collapse.html">
 <link rel="import" href="../xp-cookie/xp-cookie.html">
 <link rel="import" href="../xp-device/xp-device.html">
