- Added xp-adapter-behavior - Added xp-form - Improved xp-request - Major bug fixes - Updated dependencies - Updated documentation

--- a/xp-elements.html
+++ b/xp-elements.html
@@ -15,49 +15,52 @@ This is a collection of ExpandJS elements
 @group collections
 @homepage http://expandjs.com/elements/xp-elements
 
-@dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior#0.9.3
-@dependency xp-animation ExpandJS/xp-animation#0.9.3
-@dependency xp-array-behavior ExpandJS/xp-array-behavior#0.9.3
-@dependency xp-collapse ExpandJS/xp-collapse#0.9.3
-@dependency xp-cookie ExpandJS/xp-cookie#0.9.3
-@dependency xp-device ExpandJS/xp-device#0.9.3
-@dependency xp-dialog ExpandJS/xp-dialog#0.9.3
-@dependency xp-doc-page ExpandJS/xp-doc-page#0.9.3
-@dependency xp-doc-parser ExpandJS/xp-doc-parser#0.9.3
-@dependency xp-doc-viewer ExpandJS/xp-doc-viewer#0.9.3
-@dependency xp-embedded-behavior ExpandJS/xp-embedded-behavior#0.9.3
-@dependency xp-emitter ExpandJS/xp-emitter#0.9.3
-@dependency xp-focused-behavior ExpandJS/xp-focused-behavior#0.9.3
-@dependency xp-grid ExpandJS/xp-grid#0.9.3
-@dependency xp-i18n-behavior ExpandJS/xp-i18n-behavior#0.9.3
-@dependency xp-icon ExpandJS/xp-icon#0.9.3
-@dependency xp-iconset ExpandJS/xp-iconset#0.9.3
-@dependency xp-input-behavior ExpandJS/xp-input-behavior#0.9.3
-@dependency xp-label ExpandJS/xp-label#0.9.3
-@dependency xp-list ExpandJS/xp-list#0.9.3
-@dependency xp-markdown ExpandJS/xp-markdown#0.9.3
-@dependency xp-master-state ExpandJS/xp-master-state#0.9.3
-@dependency xp-media-query ExpandJS/xp-media-query#0.9.3
-@dependency xp-meta ExpandJS/xp-meta#0.9.3
-@dependency xp-observer ExpandJS/xp-observer#0.9.3
-@dependency xp-overlay-behavior ExpandJS/xp-overlay-behavior#0.9.3
-@dependency xp-overlay ExpandJS/xp-overlay#0.9.3
-@dependency xp-pages ExpandJS/xp-pages#0.9.3
-@dependency xp-pressed-behavior ExpandJS/xp-pressed-behavior#0.9.3
-@dependency xp-pubsub-behavior ExpandJS/xp-pubsub-behavior#0.9.3
-@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.3
-@dependency xp-request ExpandJS/xp-request#0.9.3
-@dependency xp-router ExpandJS/xp-router#0.9.3
-@dependency xp-schema ExpandJS/xp-schema#0.9.3
-@dependency xp-script ExpandJS/xp-script#0.9.3
-@dependency xp-selected-behavior ExpandJS/xp-selected-behavior#0.9.3
-@dependency xp-shared-behavior ExpandJS/xp-shared-behavior#0.9.3
-@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.3
-@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.3
-@dependency xp-tooltip ExpandJS/xp-tooltip#0.9.3
-@dependency xp-window ExpandJS/xp-window#0.9.3
+@dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.4
+@dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior#0.9.4
+@dependency xp-animation ExpandJS/xp-animation#0.9.4
+@dependency xp-array-behavior ExpandJS/xp-array-behavior#0.9.4
+@dependency xp-collapse ExpandJS/xp-collapse#0.9.4
+@dependency xp-cookie ExpandJS/xp-cookie#0.9.4
+@dependency xp-device ExpandJS/xp-device#0.9.4
+@dependency xp-dialog ExpandJS/xp-dialog#0.9.4
+@dependency xp-doc-page ExpandJS/xp-doc-page#0.9.4
+@dependency xp-doc-parser ExpandJS/xp-doc-parser#0.9.4
+@dependency xp-doc-viewer ExpandJS/xp-doc-viewer#0.9.4
+@dependency xp-embedded-behavior ExpandJS/xp-embedded-behavior#0.9.4
+@dependency xp-emitter ExpandJS/xp-emitter#0.9.4
+@dependency xp-focused-behavior ExpandJS/xp-focused-behavior#0.9.4
+@dependency xp-form ExpandJS/xp-form#0.9.4
+@dependency xp-grid ExpandJS/xp-grid#0.9.4
+@dependency xp-i18n-behavior ExpandJS/xp-i18n-behavior#0.9.4
+@dependency xp-icon ExpandJS/xp-icon#0.9.4
+@dependency xp-iconset ExpandJS/xp-iconset#0.9.4
+@dependency xp-input-behavior ExpandJS/xp-input-behavior#0.9.4
+@dependency xp-label ExpandJS/xp-label#0.9.4
+@dependency xp-list ExpandJS/xp-list#0.9.4
+@dependency xp-markdown ExpandJS/xp-markdown#0.9.4
+@dependency xp-master-state ExpandJS/xp-master-state#0.9.4
+@dependency xp-media-query ExpandJS/xp-media-query#0.9.4
+@dependency xp-meta ExpandJS/xp-meta#0.9.4
+@dependency xp-observer ExpandJS/xp-observer#0.9.4
+@dependency xp-overlay-behavior ExpandJS/xp-overlay-behavior#0.9.4
+@dependency xp-overlay ExpandJS/xp-overlay#0.9.4
+@dependency xp-pages ExpandJS/xp-pages#0.9.4
+@dependency xp-pressed-behavior ExpandJS/xp-pressed-behavior#0.9.4
+@dependency xp-pubsub-behavior ExpandJS/xp-pubsub-behavior#0.9.4
+@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.4
+@dependency xp-request ExpandJS/xp-request#0.9.4
+@dependency xp-router ExpandJS/xp-router#0.9.4
+@dependency xp-schema ExpandJS/xp-schema#0.9.4
+@dependency xp-script ExpandJS/xp-script#0.9.4
+@dependency xp-selected-behavior ExpandJS/xp-selected-behavior#0.9.4
+@dependency xp-shared-behavior ExpandJS/xp-shared-behavior#0.9.4
+@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.4
+@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.4
+@dependency xp-tooltip ExpandJS/xp-tooltip#0.9.4
+@dependency xp-window ExpandJS/xp-window#0.9.4
 -->
 
+<link rel="import" href="../xp-adapter-behavior/xp-adapter-behavior.html">
 <link rel="import" href="../xp-anchor-behavior/xp-anchor-behavior.html">
 <link rel="import" href="../xp-animation/xp-animation-group.html">
 <link rel="import" href="../xp-animation/xp-animation.html">
@@ -72,6 +75,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-embedded-behavior/xp-embedded-behavior.html">
 <link rel="import" href="../xp-emitter/xp-emitter.html">
 <link rel="import" href="../xp-focused-behavior/xp-focused-behavior.html">
+<link rel="import" href="../xp-form/xp-form.html">
 <link rel="import" href="../xp-grid/xp-grid.html">
 <link rel="import" href="../xp-i18n-behavior/xp-i18n-behavior.html">
 <link rel="import" href="../xp-icon/xp-icon.html">
