- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/xp-elements.html
+++ b/xp-elements.html
@@ -13,7 +13,8 @@ This is a collection of ExpandJS elements
 @description A collection of ExpandJS elements
 @keywords custom elements, web components, web app, html5, expandjs, web-components
 @group collections
-@homepage http://expandjs.com/elements/xp-elements
+@homepage http://expandjs.com/elements
+@repository https://github.com/ExpandJS/xp-elements
 
 @dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.5
 @dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior#0.9.5
