--- a/xp-elements.html
+++ b/xp-elements.html
@@ -16,50 +16,51 @@ This is a collection of ExpandJS elements
 @homepage http://expandjs.com/elements
 @repository https://github.com/ExpandJS/xp-elements
 
-@dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.5
-@dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior#0.9.5
-@dependency xp-animation ExpandJS/xp-animation#0.9.5
-@dependency xp-array-behavior ExpandJS/xp-array-behavior#0.9.5
-@dependency xp-collapse ExpandJS/xp-collapse#0.9.5
-@dependency xp-cookie ExpandJS/xp-cookie#0.9.5
-@dependency xp-device ExpandJS/xp-device#0.9.5
-@dependency xp-dialog ExpandJS/xp-dialog#0.9.5
-@dependency xp-doc-page ExpandJS/xp-doc-page#0.9.5
-@dependency xp-doc-parser ExpandJS/xp-doc-parser#0.9.5
-@dependency xp-doc-viewer ExpandJS/xp-doc-viewer#0.9.5
-@dependency xp-embedded-behavior ExpandJS/xp-embedded-behavior#0.9.5
-@dependency xp-emitter ExpandJS/xp-emitter#0.9.5
-@dependency xp-focused-behavior ExpandJS/xp-focused-behavior#0.9.5
-@dependency xp-form ExpandJS/xp-form#0.9.5
-@dependency xp-grid ExpandJS/xp-grid#0.9.5
-@dependency xp-i18n-behavior ExpandJS/xp-i18n-behavior#0.9.5
-@dependency xp-icon ExpandJS/xp-icon#0.9.5
-@dependency xp-iconset ExpandJS/xp-iconset#0.9.5
-@dependency xp-input-behavior ExpandJS/xp-input-behavior#0.9.5
-@dependency xp-label ExpandJS/xp-label#0.9.5
-@dependency xp-list ExpandJS/xp-list#0.9.5
-@dependency xp-markdown ExpandJS/xp-markdown#0.9.5
-@dependency xp-master-state ExpandJS/xp-master-state#0.9.5
-@dependency xp-media-query ExpandJS/xp-media-query#0.9.5
-@dependency xp-meta ExpandJS/xp-meta#0.9.5
-@dependency xp-multi-select-behavior ExpandJS/xp-multi-select-behavior#0.9.5
-@dependency xp-observer ExpandJS/xp-observer#0.9.5
-@dependency xp-overlay ExpandJS/xp-overlay#0.9.5
-@dependency xp-overlay-behavior ExpandJS/xp-overlay-behavior#0.9.5
-@dependency xp-pages ExpandJS/xp-pages#0.9.5
-@dependency xp-pressed-behavior ExpandJS/xp-pressed-behavior#0.9.5
-@dependency xp-pubsub-behavior ExpandJS/xp-pubsub-behavior#0.9.5
-@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.5
-@dependency xp-request ExpandJS/xp-request#0.9.5
-@dependency xp-router ExpandJS/xp-router#0.9.5
-@dependency xp-schema ExpandJS/xp-schema#0.9.5
-@dependency xp-script ExpandJS/xp-script#0.9.5
-@dependency xp-selected-behavior ExpandJS/xp-selected-behavior#0.9.5
-@dependency xp-shared-behavior ExpandJS/xp-shared-behavior#0.9.5
-@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.5
-@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.5
-@dependency xp-tooltip ExpandJS/xp-tooltip#0.9.5
-@dependency xp-window ExpandJS/xp-window#0.9.5
+@dependency xp-adapter-behavior ExpandJS/xp-adapter-behavior#0.9.6
+@dependency xp-anchor-behavior ExpandJS/xp-anchor-behavior#0.9.6
+@dependency xp-animation ExpandJS/xp-animation#0.9.6
+@dependency xp-array-behavior ExpandJS/xp-array-behavior#0.9.6
+@dependency xp-collapse ExpandJS/xp-collapse#0.9.6
+@dependency xp-cookie ExpandJS/xp-cookie#0.9.6
+@dependency xp-device ExpandJS/xp-device#0.9.6
+@dependency xp-dialog ExpandJS/xp-dialog#0.9.6
+@dependency xp-doc-page ExpandJS/xp-doc-page#0.9.6
+@dependency xp-doc-parser ExpandJS/xp-doc-parser#0.9.6
+@dependency xp-doc-viewer ExpandJS/xp-doc-viewer#0.9.6
+@dependency xp-embedded-behavior ExpandJS/xp-embedded-behavior#0.9.6
+@dependency xp-emitter ExpandJS/xp-emitter#0.9.6
+@dependency xp-finder-behavior ExpandJS/xp-finder-behavior#0.9.6
+@dependency xp-focused-behavior ExpandJS/xp-focused-behavior#0.9.6
+@dependency xp-form ExpandJS/xp-form#0.9.6
+@dependency xp-grid ExpandJS/xp-grid#0.9.6
+@dependency xp-i18n-behavior ExpandJS/xp-i18n-behavior#0.9.6
+@dependency xp-icon ExpandJS/xp-icon#0.9.6
+@dependency xp-iconset ExpandJS/xp-iconset#0.9.6
+@dependency xp-input-behavior ExpandJS/xp-input-behavior#0.9.6
+@dependency xp-label ExpandJS/xp-label#0.9.6
+@dependency xp-list ExpandJS/xp-list#0.9.6
+@dependency xp-markdown ExpandJS/xp-markdown#0.9.6
+@dependency xp-master-behavior ExpandJS/xp-master-behavior#0.9.6
+@dependency xp-media-query ExpandJS/xp-media-query#0.9.6
+@dependency xp-meta ExpandJS/xp-meta#0.9.6
+@dependency xp-multi-select-behavior ExpandJS/xp-multi-select-behavior#0.9.6
+@dependency xp-observer ExpandJS/xp-observer#0.9.6
+@dependency xp-overlay ExpandJS/xp-overlay#0.9.6
+@dependency xp-overlay-behavior ExpandJS/xp-overlay-behavior#0.9.6
+@dependency xp-pages ExpandJS/xp-pages#0.9.6
+@dependency xp-pressed-behavior ExpandJS/xp-pressed-behavior#0.9.6
+@dependency xp-pubsub-behavior ExpandJS/xp-pubsub-behavior#0.9.6
+@dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.6
+@dependency xp-request ExpandJS/xp-request#0.9.6
+@dependency xp-router ExpandJS/xp-router#0.9.6
+@dependency xp-schema ExpandJS/xp-schema#0.9.6
+@dependency xp-script ExpandJS/xp-script#0.9.6
+@dependency xp-selected-behavior ExpandJS/xp-selected-behavior#0.9.6
+@dependency xp-shared-behavior ExpandJS/xp-shared-behavior#0.9.6
+@dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.9.6
+@dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.6
+@dependency xp-tooltip ExpandJS/xp-tooltip#0.9.6
+@dependency xp-window ExpandJS/xp-window#0.9.6
 -->
 
 <link rel="import" href="../xp-adapter-behavior/xp-adapter-behavior.html">
@@ -76,6 +77,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-doc-viewer/xp-doc-viewer.html">
 <link rel="import" href="../xp-embedded-behavior/xp-embedded-behavior.html">
 <link rel="import" href="../xp-emitter/xp-emitter.html">
+<link rel="import" href="../xp-finder-behavior/xp-finder-behavior.html">
 <link rel="import" href="../xp-focused-behavior/xp-focused-behavior.html">
 <link rel="import" href="../xp-form/xp-form.html">
 <link rel="import" href="../xp-grid/xp-grid.html">
@@ -87,7 +89,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-list/xp-list.html">
 <link rel="import" href="../xp-list/xp-sublist.html">
 <link rel="import" href="../xp-markdown/xp-markdown.html">
-<link rel="import" href="../xp-master-state/xp-master-state.html">
+<link rel="import" href="../xp-master-behavior/xp-master-behavior.html">
 <link rel="import" href="../xp-media-query/xp-media-queries.html">
 <link rel="import" href="../xp-media-query/xp-media-query.html">
 <link rel="import" href="../xp-meta/xp-meta.html">
@@ -107,7 +109,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-script/xp-script.html">
 <link rel="import" href="../xp-selected-behavior/xp-selected-behavior.html">
 <link rel="import" href="../xp-shared-behavior/xp-shared-behavior.html">
-<link rel="import" href="../xp-slave-state/xp-slave-state.html">
+<link rel="import" href="../xp-slave-behavior/xp-slave-behavior.html">
 <link rel="import" href="../xp-targeter-behavior/xp-targeter-behavior.html">
 <link rel="import" href="../xp-tooltip/xp-tooltip.html">
 <link rel="import" href="../xp-window/xp-window.html">
