- Added mat-snackbar - Added mat-toast - Added xp-toast-behavior - Implemented custom input validation - Updated mat-settings - Minor bug fixes

--- a/xp-elements.html
+++ b/xp-elements.html
@@ -59,6 +59,7 @@ This is a collection of ExpandJS elements
 @dependency xp-shared-behavior ExpandJS/xp-shared-behavior#0.9.8
 @dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.9.8
 @dependency xp-targeter-behavior ExpandJS/xp-targeter-behavior#0.9.8
+@dependency xp-toast-behavior ExpandJS/xp-toast-behavior#0.9.8
 @dependency xp-tooltip ExpandJS/xp-tooltip#0.9.8
 @dependency xp-window ExpandJS/xp-window#0.9.8
 -->
@@ -111,5 +112,6 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-shared-behavior/xp-shared-behavior.html">
 <link rel="import" href="../xp-slave-behavior/xp-slave-behavior.html">
 <link rel="import" href="../xp-targeter-behavior/xp-targeter-behavior.html">
+<link rel="import" href="../xp-toast-behavior/xp-toast-behavior.html">
 <link rel="import" href="../xp-tooltip/xp-tooltip.html">
 <link rel="import" href="../xp-window/xp-window.html">
