--- a/xp-elements.html
+++ b/xp-elements.html
@@ -97,10 +97,12 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-multi-select-behavior/xp-multi-select-behavior.html">
 <link rel="import" href="../xp-observer/xp-observer.html">
 <link rel="import" href="../xp-overlay-behavior/xp-overlay-behavior.html">
+<link rel="import" href="../xp-overlay-behavior/xp-overlay-styles.html">
 <link rel="import" href="../xp-overlay/xp-overlay.html">
 <link rel="import" href="../xp-pages/xp-page.html">
 <link rel="import" href="../xp-pages/xp-pages.html">
 <link rel="import" href="../xp-pressed-behavior/xp-pressed-behavior.html">
+<link rel="import" href="../xp-pressed-behavior/xp-pressed-styles.html">
 <link rel="import" href="../xp-pubsub-behavior/xp-pubsub-behavior.html">
 <link rel="import" href="../xp-referral-behavior/xp-referral-behavior.html">
 <link rel="import" href="../xp-request/xp-request.html">
