- Added mat-snackbar - Added mat-toast - Added xp-pressed-styles - Added xp-overlay-styles - Added xp-toast-behavior
- Implemented custom input validation
- Updated all elements to support Polymer 1.1
- Updated mat-settings

- Minor bug fixes

--- a/xp-elements.html
+++ b/xp-elements.html
@@ -115,5 +115,6 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-slave-behavior/xp-slave-behavior.html">
 <link rel="import" href="../xp-targeter-behavior/xp-targeter-behavior.html">
 <link rel="import" href="../xp-toast-behavior/xp-toast-behavior.html">
+<link rel="import" href="../xp-toast-behavior/xp-toast-styles.html">
 <link rel="import" href="../xp-tooltip/xp-tooltip.html">
 <link rel="import" href="../xp-window/xp-window.html">
