- Added mat-snackbar - Added mat-toast - Added xp-pressed-styles - Added xp-overlay-styles - Added xp-toast-behavior
- Implemented custom input validation
- Updated all elements to support Polymer 1.1
- Updated mat-settings

- Minor bug fixes

--- a/xp-elements.html
+++ b/xp-elements.html
@@ -44,6 +44,7 @@ This is a collection of ExpandJS elements
 @dependency xp-media-query ExpandJS/xp-media-query#0.9.8
 @dependency xp-meta ExpandJS/xp-meta#0.9.8
 @dependency xp-multi-select-behavior ExpandJS/xp-multi-select-behavior#0.9.8
+@dependency xp-object-behavior ExpandJS/xp-object-behavior#0.9.8
 @dependency xp-observer ExpandJS/xp-observer#0.9.8
 @dependency xp-overlay ExpandJS/xp-overlay#0.9.8
 @dependency xp-overlay-behavior ExpandJS/xp-overlay-behavior#0.9.8
@@ -95,6 +96,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-media-query/xp-media-query.html">
 <link rel="import" href="../xp-meta/xp-meta.html">
 <link rel="import" href="../xp-multi-select-behavior/xp-multi-select-behavior.html">
+<link rel="import" href="../xp-object-behavior/xp-object-behavior.html">
 <link rel="import" href="../xp-observer/xp-observer.html">
 <link rel="import" href="../xp-overlay-behavior/xp-overlay-behavior.html">
 <link rel="import" href="../xp-overlay-behavior/xp-overlay-styles.html">
