- Added mat-table - Added xp-overlay-injector - Added xp-refirer-behavior - Improved sharing mechanism on xp-shared-behavior - Improved validation and added `validate` method on xp-form - Improved `parseURL` and `toURL` functions on expandjs - Replaced `toggles-target` with `behavior` attribute on xp-pressed-behavior - Minor bug fixes

--- a/xp-elements.html
+++ b/xp-elements.html
@@ -51,6 +51,7 @@ This is a collection of ExpandJS elements
 @dependency xp-pressed-behavior ExpandJS/xp-pressed-behavior#0.9.11
 @dependency xp-pubsub-behavior ExpandJS/xp-pubsub-behavior#0.9.11
 @dependency xp-referral-behavior ExpandJS/xp-referral-behavior#0.9.11
+@dependency xp-refirer-behavior ExpandJS/xp-refirer-behavior#0.9.11
 @dependency xp-request ExpandJS/xp-request#0.9.11
 @dependency xp-router ExpandJS/xp-router#0.9.11
 @dependency xp-schema ExpandJS/xp-schema#0.9.11
@@ -105,6 +106,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-pressed-behavior/xp-pressed-styles.html">
 <link rel="import" href="../xp-pubsub-behavior/xp-pubsub-behavior.html">
 <link rel="import" href="../xp-referral-behavior/xp-referral-behavior.html">
+<link rel="import" href="../xp-refirer-behavior/xp-refirer-behavior.html">
 <link rel="import" href="../xp-request/xp-request.html">
 <link rel="import" href="../xp-router/xp-route.html">
 <link rel="import" href="../xp-router/xp-router.html">
