- Added mat-table - Added xp-overlay-injector - Added xp-refirer-behavior - Improved sharing mechanism on xp-shared-behavior - Improved validation and added `validate` method on xp-form - Improved `parseURL` and `toURL` functions on expandjs - Replaced `toggles-target` with `behavior` attribute on xp-pressed-behavior - Minor bug fixes

--- a/xp-elements.html
+++ b/xp-elements.html
@@ -98,6 +98,7 @@ This is a collection of ExpandJS elements
 <link rel="import" href="../xp-object-behavior/xp-object-behavior.html">
 <link rel="import" href="../xp-observer/xp-observer.html">
 <link rel="import" href="../xp-overlay-behavior/xp-overlay-behavior.html">
+<link rel="import" href="../xp-overlay-behavior/xp-overlay-injector.html">
 <link rel="import" href="../xp-overlay-behavior/xp-overlay-styles.html">
 <link rel="import" href="../xp-overlay/xp-overlay.html">
 <link rel="import" href="../xp-pages/xp-page.html">
