--- a/xp-dialog-behavior.html
+++ b/xp-dialog-behavior.html
@@ -75,12 +75,11 @@ A behavior used to add dialog capabilities on a web component.
              *
              * @attribute height
              * @type number
-             * @default 0
              */
             height: {
                 reflectToAttribute: true,
                 type: Number,
-                value: 0
+                value: null
             },
 
             /**
@@ -101,12 +100,11 @@ A behavior used to add dialog capabilities on a web component.
              *
              * @attribute width
              * @type number
-             * @default 0
              */
             width: {
                 reflectToAttribute: true,
                 type: Number,
-                value: 0
+                value: null
             }
         },
 
